--- a/src/pages/collection/collection.wxml
+++ b/src/pages/collection/collection.wxml
@@ -39,11 +39,11 @@
     </view>
 
 		<!-- 运动卡片 -->
-		<view style="height: 200rpx; margin-top: 20rpx;" wx:for="{{ motionsShow }}" wx:key="index">
+		<view style="margin-top: 20rpx;" wx:for="{{ motionsShow }}" wx:key="index" data-index="{{index}}" 
+			bindtap="handleStartMotion"
+		>
       <image src="/src/image/task-circle.png" mode="aspectFit" style="height: 16rpx; width: 16rpx; position: absolute; margin-left: -30rpx;"></image>
-      <!-- <view class="task-left-line" style="height: {{ index + 1 < motionsShow.length? '224rpx': '177rpx' }};"></view> -->
-      <image class="motion-image" src="{{item.image}}" mode="aspectFill"></image>
-			<!-- <task-item catch:tap="handleEditor" image="{{item.image}}" data-type="{{ item.type }}" content="{{ item.type }}"/> -->
+      <image class="motion-image" src="{{item.image}}" mode="aspectFill" style="height: {{item.height}}rpx;"></image>
     </view>
   </view>
 </view>
