--- a/src/pages/collection/collection.wxss
+++ b/src/pages/collection/collection.wxss
@@ -59,9 +59,9 @@ page {
 }
 
 .motion-image {
-	position: absolute;
+	position: relative;
 	height: 200rpx;
-	right: 50rpx;
+	left: 50rpx;
 	border-radius: 20rpx;
 	box-shadow: 0px 0px 26rpx 0px rgba(132, 132, 132, 0.18);
 }
