--- a/src/pages/camera/camera.wxml
+++ b/src/pages/camera/camera.wxml
@@ -7,3 +7,4 @@
 	style="width: 100%; height: {{windowHeight - navHeight}}px;"
 ></camera>
 <canvas class="canvas" id="myCanvas" type="2d" style="top: {{navHeight}}px; height: {{windowHeight - navHeight - bottomLineHeight}}px; width: {{windowWidth}}px;"></canvas>
+<mp-toptips msg="{{msg}}" type="info" show="{{show}}"></mp-toptips>
